fix: fixed an issue with the loading indicator not being visible

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -71,6 +71,7 @@ body {
   justify-content: center;
   align-items: center;
   pointer-events: none;
+  z-index: 89;
 }
 
 .c-notification {
